@@ -1,33 +1,12 @@
+% $Id$
 % compile 3 times: latex tex4ht-info-svg   
-%          or htlatex tex4ht-info-svg "html,sections+"
+%             or htlatex tex4ht-info-svg "html,sections+"
+%            or ht latex tex4ht-info
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-info-svg.tex                                    %
-% Copyright (C) 2000--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
-
-% Compile with the command `ht latex tex4ht-info'
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2000--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \ifx \HTML\UnDef
    \def\HTML{infosvg}
@@ -66,20 +45,7 @@
    \def\temp##1>>>{\egroup
       \expandafter \def\csname #1\endcsname{##1}}\temp}
 
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
+\input{common}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{INFO}
@@ -87,25 +53,10 @@
 
 
 \<infosvg\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% infosvg.4ht                           |version %
-% Copyright (C) |CopyYear.2000.       Eitan M. Gurari         %
-%                                                        %
-% This program can redistributed and/or modified under   %
-% the terms of the LaTeX Project Public License          %
-% Distributed from CTAN archives in directory            %
-% macros/latex/base/lppl.txt; either version 1 of the    %
-% License, or (at your option) any later version.        %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                              gurari@cse.ohio-state.edu %
-%                  http://www.cse.ohio-state.edu/~gurari %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version |version}
+% infosvg.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) |CopyYear.2000. Eitan M. Gurari
+|<TeX4ht copywrite|>
 {          \catcode`\@=0 \catcode`\\=11 @relax
   @gdef@infoIVht[#1]#2//{%
     @ifnum #1>1
